# code-noodling

./: .gitignore  README.md
applied_examples/python/: network_monitor.py
columned_filing/: project_build.bash
columned_filing/src/: CMakeLists.txt  car_deque.cpp  car_deque.hpp  car_struct.hpp  columned_queue_file.hpp  constants.hpp  dequed_file.hpp  fault_deque.cpp  fault_deque.hpp  main.cpp  struct_car.hpp  struct_car_t.hpp  struct_fault_t.hpp
fault_manager/: build_run.sh  fault_buffer.cpp  fault_buffer.hpp  fault_manager.cpp  fault_manager_constants.hpp  fault_queue.cpp  fault_queue.hpp  fault_struct.hpp
programs/fault_manager/: build_run.sh  fault_manager_constants.hpp  fault_queue.hpp  fault_struct.hpp
programs/osdp_port_tester/: CMakeLists.txt  main.cpp
programs/port_reader/: CMakeLists.txt  build.bash  main.cpp
programs/simulated_osdp/: CMakeLists.txt  main.cpp  reader.hpp  simulated_port.cpp  writer.hpp
programs/template_priority_queue/: build_run.sh  fruit_queue_class.cpp  main.cpp  struct_car.hpp  struct_fruit.hpp  tpq_constants.hpp
simulated_osdp/: CMakeLists.txt  main.cpp  reader.cpp  reader.hpp  simulated_port.cpp  simulated_port.hpp  writer.cpp  writer.hpp
snippets/c++/macros/src/: CMakeLists.txt  main.cpp
snippets/cmake/: readme.md
snippets/seg_fault_stack_trace/: CMakeLists.txt  main.cpp
snippets/structs/: build_run.sh  (+1 more)
template_class/: project_build.bash
template_class/src/: CMakeLists.txt  TestTemp.cpp  TestTemp.hpp  main.cpp
template_priority_queue/: car_queue_class.cpp  car_queue_class.hpp  priority_queue_manager.hpp
(+180 files in other folders)
